src/objects/Job__c.object
<CustomObject>
    <description>Custom Object to Capture Cleaning Company Jobs</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation ship to Account -</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <description>Commission Amount</description>
        <formula>Total_Price__c / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Commission Amount to the Employee at 50% rate</inlineHelpText>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Commission Paid to the Employee</description>
        <inlineHelpText>If the Commission is Paid to Employee</inlineHelpText>
        <label>Commission Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned To</description>
        <inlineHelpText>The Worker performing this Job</inlineHelpText>
        <label>Job Assignment</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the job was completed</description>
        <inlineHelpText>If the job was completed</inlineHelpText>
        <label>Job Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Date__c</fullName>
        <description>Date the Job needs to be completed on</description>
        <inlineHelpText>Date the Job needs to be completed on</inlineHelpText>
        <label>Job Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to Opportunity for Weekly - Monthly Orders</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantty</description>
        <inlineHelpText>Number of Workers</inlineHelpText>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Total Price of the service to the customer</description>
        <inlineHelpText>Total Price of the service to the customer</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Job_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Quantity__c</columns>
        <columns>Total_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>